--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
                 {% endif %}
             {% endfor %}
         {% else %}
-        <p class='''> You have no groups! Go make one!</p>
+        <p class=''> You have no groups! Go make one!</p>
         {% endif %}
 </div>
 {% endblock %}
