--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-md navbar-light bg-light ms-1 ps-4"> 
+        <nav class="navbar navbar-expand-md navbar-light bg-light ms-1 ps-4 border-bottom"> 
             <a class="navbar-brand fw-bold" href="/">Highlight of the Week</a>
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
@@ -29,34 +29,36 @@
             <div class="collapse navbar-collapse" id="navbar">
                 {% if session.user_id %}
                     <ul class="navbar-nav me-auto mt-2">
-                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="/about">about</a></li>
-                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="/help">help</a></li>
+                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="{{ url_for('about')}}">about</a></li>
+                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="{{ url_for('help')}}">help</a></li>
                         <li class="nav-item px-2"><a class="nav-link" href="/account">account</a></li>
                         <li class="nav-item px-2"><a class="nav-link" href="/new_group"><button class='btn btn-primary'>Create a group</button></a></li>
                     </ul>
                 {% else %}
                     <ul class="navbar-nav ms-auto mt-2 pe-3">
-                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="/about">about</a></li>
-                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="/help">help</a></li>
-                        <li class="nav-item px-2"><a class="nav-link" href="/sign_in"><button class='btn btn-primary'>Sign In</button></a></li>
+                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="{{ url_for('about')}}">about</a></li>
+                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="{{ url_for('help')}}">help</a></li>
+                        <li class="nav-item px-2"><a class="nav-link" href="{{ url_for('sign_in')}}"><button class='btn btn-primary'>Sign In</button></a></li>
                     </ul>
                 {% endif %}
             </div>
         </nav>
 
-        {% if get_flashed_messages() %}
-            <header>
-                <div class="alert alert-primary border text-center" role="alert">
-                    {{ get_flashed_messages() | join(" ") }}
-                </div>
-            </header>
-        {% endif %}
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} border text-center" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
 
         <main class="container mx-5">
             {% block main %}{% endblock %}
         </main>
 
-        <footer class="small text-center text-muted py-4 border-top">
+        <footer class="small text-center text-muted py-4">
             Created by <a class='text-muted' href='https://github.com/dtour/hotw'>dtour</a>
         </footer>
 
