--- a/application/templates/sign_in.html
+++ b/application/templates/sign_in.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}sign_in{% endblock %}
+{% block title %}sign in{% endblock %}
 {% block main %}
 <div class='container mt-4 px-5 text-center'>
     <form method='POST' action=''>
