--- a/application/templates/account.html
+++ b/application/templates/account.html
@@ -2,4 +2,13 @@
 
 {% block title %}account{% endblock %}
 {% block main %}
+<div class='container mt-4 px-5 text-center'>
+    <p> Email: {{ current_user.email }}</p>
+    <div>
+        <a href=' {{url_for("change_password") }}'><button class='btn btn-secondary'> Change password </button></a>
+    </div>
+    <div class='py-3'>
+        <a href=' {{url_for("sign_out") }}'><button class='btn btn-secondary'>Sign out</button></a>
+    </div>
+</div>
 {% endblock %}
