--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -53,3 +53,16 @@
         </div>
 </div>
 {% endblock %}
+© 2021 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+Loading complete
