--- a/application/static/styles.css
+++ b/application/static/styles.css
@@ -1,10 +1,10 @@
 body{
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background: #edefeb; 
+    background: #edefeb;
 }
 
 .navbar-light{
-    background: #dddfdb !important;
+    background: #dfebdd !important;
 }
 
 .nav-link{
