--- a/application/templates/account.html
+++ b/application/templates/account.html
@@ -5,7 +5,7 @@
 <div class='container mt-4 px-5 text-center'>
     <p> Email: {{ current_user.email }}</p>
     <div>
-        <a href=' {{url_for("change_password") }}'><button class='btn btn-secondary'> Change password </button></a>
+        <a href='{{ url_for("reset_request") }}'><button class='btn btn-secondary'> Change password </button></a>
     </div>
     <div class='py-3'>
         <a href=' {{url_for("sign_out") }}'><button class='btn btn-secondary'>Sign out</button></a>
