--- a/application/templates/reset_request.html
+++ b/application/templates/reset_request.html
@@ -18,7 +18,7 @@
             {% endif %}
         </div>
          <div class="mb-3">
-          {{ form.submit(class='btn btn-primary') }}
+          {{ form.submit(class='btn btn-secondary') }}
         </div>
     </form>
 </div>
