edited home html

--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -11,8 +11,8 @@
                 <p>You've already submitted your highlight for this week!</p>
                 {% else %}
                 <form class="col-12">
-                    <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-                    <button type="submit" class="btn btn-primary mb-3">Submit</button>
+                    <input type="url" class="form-control form-control-dark" placeholder="URL" aria-label="URL">
+                    <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
                 {% endif %}
             {% endfor %}
