added background scheduler and function to send highlight summary email every week

--- a/application/static/styles.css
+++ b/application/static/styles.css
@@ -1,10 +1,10 @@
 body{
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background: #edefeb;
+    background: #f0f0f0;
 }
 
 .navbar-light{
-    background: #eceeea !important;
+    background: #efefef !important;
 }
 
 .nav-link{
