--- a/application/templates/email_templates/weekly_highlights.html
+++ b/application/templates/email_templates/weekly_highlights.html
@@ -5,7 +5,7 @@
         <tr style="color:#333;font-family:ubuntu,Helvetica,'Lucida Grande',Arial,sans-serif;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;margin:0;padding:0">
         <td style="color:#333;font-family:ubuntu,Helvetica,'Lucida Grande',Arial,sans-serif;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;margin:0;padding:0">
     
-            <h2 style="font-family:ubuntu,'Lucida Grande',Arial,sans-serif;padding-top:20px;padding-bottom:0;padding-right:0;padding-left:0;color:#ff3300;font-size:16px;font-weight:bold;margin-top:20px;margin-bottom:3px;margin-right:0;margin-left:0;text-transform:uppercase;margin:20px 0 10px;padding:0"><span style="color:#333">#</span>Week #{{ week }}, {{ year }}</h2>
+            <h2 style="font-family:ubuntu,'Lucida Grande',Arial,sans-serif;padding-top:20px;padding-bottom:0;padding-right:0;padding-left:0;color:black;font-size:16px;font-weight:bold;margin-top:20px;margin-bottom:3px;margin-right:0;margin-left:0;text-transform:uppercase;margin:20px 0 10px;padding:0">Week #{{ week }}, {{ year }}</h2>
     
     <hr>
         {% for submission in submissions %}
