changed html to increase responsiveness on smaller screens

--- a/application/templates/about.html
+++ b/application/templates/about.html
@@ -6,7 +6,7 @@
     <div class="row lh-lg">
         <div class="col">
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
             <h4 class='text-center'>What is Highlight of the Week and why should I use it?</h4>
                 <p></p>
                 <p class='py-1'>Highlight of the Week is a free group newsletter service that allows people to share and discover interesting online content. 
