--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -54,7 +54,7 @@
             {% endif %}
         {% endwith %}
 
-        <main class="container-fluid px-5">
+        <main class="container-fluid px-md-5">
             {% block main %}{% endblock %}
         </main>
 
