--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="overflow-hidden" style="max-height: 35vh;">
-        <div class="container px-5">
+        <div class="container px-md-5">
             <img src="/static/placeholder.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy" title="">
         </div>
     </div>
