minor copywriting changes

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -5,7 +5,7 @@
 <div class="container px-4 pt-4 mt-5 mb-1 text-center" id='hero'>
     <h1 class="display-6 fw-bold">Let your friends curate content for you</h1>
     <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">Create group newsletters where each member shares the most interesting thing that they've come across each week.</p>
+        <p class="lead mb-4">Group newsletters where each member shares the highlight of their week.</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
             <a href='/sign_in'><button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Get started</button></a>
             <a href='/about'><button type="button" class="btn btn-outline-secondary btn-lg px-4">Why is this useful?</button></a>
