--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -29,15 +29,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 {% if current_user.is_authenticated %}
                     <ul class="navbar-nav ms-auto mt-2 pe-3">
-                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="{{ url_for('about')}}">about</a></li>
-                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="{{ url_for('help')}}">help</a></li>
-                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="{{ url_for('account')}}">account</a></li>
-                        <li class="nav-item px-2"><a class="nav-link" href="/new_group"><button class='btn btn-primary'>Create group</button></a></li>
+                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="{{ url_for('about')}}">About</a></li>
+                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="{{ url_for('help')}}">Help</a></li>
+                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="{{ url_for('account')}}">Account</a></li>
+                        <li class="nav-item px-2"><a class="nav-link" href="/new_group"><button class='btn btn-primary'>Create Group</button></a></li>
                     </ul>
                 {% else %}
                     <ul class="navbar-nav ms-auto mt-2 pe-3">
-                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="{{ url_for('about')}}">about</a></li>
-                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="{{ url_for('help')}}">help</a></li>
+                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="{{ url_for('about')}}">About</a></li>
+                        <li class="nav-item pt-2 px-2"><a class="nav-link" href="{{ url_for('help')}}">Help</a></li>
                         <li class="nav-item px-2"><a class="nav-link" href="{{ url_for('sign_in')}}"><button class='btn btn-primary'>Sign In</button></a></li>
                     </ul>
                 {% endif %}
