--- a/application/templates/help.html
+++ b/application/templates/help.html
@@ -6,7 +6,7 @@
     <div class="row lh-lg">
         <div class="col">
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
             <h5 class=>How can I contact you?</h5>
                 <p class='py-1'>You can email us at dtour@hotw.app.</p>
         </div>
