--- a/application/templates/about.html
+++ b/application/templates/about.html
@@ -14,9 +14,7 @@
                     We ask you to share 'the most interesting thing you've come across this week – articles, videos, podcasts, anything at all.</p>
                 <p class='py-1'> Whether it be with close friends or new acquaintances, seeing what someone likes to read, watch, or listen to is a surprisingly
                     effective way to get to know them. A lot of online interaction is often superficial and regularly sharing quality
-                    content helps to circumvent that. With physical interaction being limited in our current climate, having meaningful online activities 
-                    is becoming increasingly important.</p>
-                <p class='py-1'> Seeing what others find interesting on a regular basis is also a great way to get out of your 'intellectual' box – to discover
+                    content helps to circumvent that. Seeing what others find interesting on a regular basis is also a great way to get out of your 'intellectual' box – to discover
                     interests and perspectives. It's particularly valuable when it comes from those that you trust or respect.</p>
                 <p class='py-1'> Highlight of the Week aims to make establishing a practice of sharing weekly highlights as effortless as possible. Email tends to be the
                     most effective way of doing so, fitting in seamlessly with users that are already familiar with newsletters and allowing users to 
