edited help.html format

--- a/application/templates/help.html
+++ b/application/templates/help.html
@@ -8,7 +8,7 @@
         </div>
         <div class="col-md-6">
             <h5 class=>How can I contact you?</h5>
-                <p class='py-1'>You can email us at dtour@hotw.app.</p>
+                <p class='py-1'>You can reach us at dtour@hotw.app.</p>
         </div>
         <div class="col">
         </div>
